"fix overflow content"

--- a/Notes.css
+++ b/Notes.css
@@ -60,12 +60,11 @@
       }
   
       .note {
-        display: block;
+        display: flex;
+        flex-direction: column;
         min-width: 0;  
-        list-style-type: none;
         margin: 0;
         padding: 0;
-        white-space: nowrap;
       }
   
       .button {
